Web Inspector: MediaQueryList listener silently catches errors https://bugs.webkit.org/show_bug.cgi?id=105162

Reviewed by Alexander Pavlov.

Source/WebCore:

Drive-by: removed unused ScriptCallback::call(bool).

Test: inspector-protocol/media-query-listener-exception.html

* bindings/js/ScriptFunctionCall.cpp:
(WebCore::ScriptCallback::call):
* bindings/js/ScriptFunctionCall.h:
(ScriptCallback):
* bindings/v8/ScriptFunctionCall.cpp: report uncaught exception to the inspector
if it was thrown during the function call.
(WebCore::ScriptCallback::call):
* bindings/v8/ScriptFunctionCall.h:
(ScriptCallback):

LayoutTests:

Test that uncaught exception in MediaQueryListListener will be logged to the console.

* http/tests/inspector-protocol/resources/protocol-test.js:
(runTest):
* inspector-protocol/media-query-listener-exception-expected.txt: Added.
* inspector-protocol/media-query-listener-exception.html: Added.

Canonical link: https://commits.webkit.org/123510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138003 268f45cc-cd09-0410-ab3c-d52691b4dbfc