Source/WebCore/bindings/js/ScriptFunctionCall.h
@@ -88,7 +88,6 @@ namespace WebCore {
         ScriptCallback(ScriptState*, const ScriptValue&);
 
         ScriptValue call();
-        ScriptValue call(bool& hadException);
 
     private:
         ScriptValue m_function;
